# UnasciiEngine

./: .gitignore  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/Engine/: Engine.hpp  uaepch.h
Engine/include/Engine/Core/: Application.hpp  Types.hpp  UADef.hpp
Engine/include/Engine/Runtime/Platform/: Window.hpp
Engine/include/Engine/Runtime/Platform/Windows/: WindowWindows.hpp
Engine/include/Engine/Runtime/RHI/: RHIDef.hpp  RHIDevice.hpp
Engine/include/Engine/Runtime/RHI/Exar/: Exar.hpp  ExarAllocatorDesc.hpp  ExarBufferDesc.hpp  ExarBufferView.hpp  IExarBuffer.hpp  IExarDevice.hpp  IExarObject.hpp  IExarRessource.hpp
Engine/include/Engine/Runtime/RHI/Exar/Internal/: ExarAllocator.hpp  ExarBuffer.hpp
Engine/src/Core/: Application.cpp
Engine/src/Runtime/Platform/Windows/: WindowWindows.cpp
Engine/src/Runtime/RHI/Exar/: ExarBuffer.cpp
Unascii/: CMakeLists.txt
Unascii/src/: main.cpp
include/App/: main.cpp
include/Core/: Application.hpp
include/Runtime/Platform/: Window.hpp
include/Runtime/Platform/Windows/: WindowWindows.hpp
src/: main.cpp
src/App/: main.cpp
src/Core/: Application.cpp
src/Runtime/Platform/Windows/: WindowWindows.cpp
