project(Engine)

set (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set (INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB_RECURSE SOURCES
    CONFIGURE_DEPENDS
    ${SRC_DIR}/*.cpp
)

file(GLOB_RECURSE HEADERS
    CONFIGURE_DEPENDS
    ${INC_DIR}/*.hpp
    ${INC_DIR}/*.h
)

add_library(${PROJECT_NAME} SHARED ${SOURCES})

source_group(
    TREE ${INC_DIR}
    PREFIX "Headers Files"
    FILES ${HEADERS}
)

source_group(
    TREE ${SRC_DIR}
    PREFIX "Source Files"
    FILES ${SOURCES}
)

target_sources(
    ${PROJECT_NAME}
    PRIVATE
    ${HEADERS}
)

target_include_directories(
    ${PROJECT_NAME}
    PUBLIC 
    $<BUILD_INTERFACE:${INC_DIR}>
    $<INSTALL_INTERFACE:include>
)

target_compile_definitions(${PROJECT_NAME} PRIVATE UNASCII_BUILD_DLL)
target_precompile_headers(${PROJECT_NAME} PRIVATE "${INC_DIR}/${PROJECT_NAME}/uaepch.h")

install(
    DIRECTORY ${INC_DIR}/
    DESTINATION include
)

if(CMAKE_VERSION VERSION_GREATER 3.8)
    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
else()
    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
endif()
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)